# fenster

./: .gitignore  Cargo.toml  README.md  justfile
bindings/dart/: pubspec.yaml
bindings/dart/lib/: quelle.dart
bindings/dart/lib/bindings/: generated_bindings.dart
bindings/dart/lib/src/: locator.dart  quelle.dart
bindings/dart/lib/src/bindings/: bindings.dart  signatures.dart  types.dart
bindings/dart/lib/src/models/: attribute.dart  chapter.dart  meta.dart  metadata.dart  models.dart  novel.dart  novel_status.dart  reading_direction.dart  volume.dart
bindings/native/: Cargo.toml
bindings/native/src/: lib.rs
bootstrap/: Cargo.toml
bootstrap/src/: http.rs  lib.rs  out.rs
cli/: Cargo.toml
cli/src/: build.rs  epub.rs  lock.rs  main.rs
cli/src/args/: download_range.rs  mod.rs
cli/src/bundle/: epub.rs  mod.rs
cli/src/bundle/download/: data.rs  mod.rs  options.rs
clients/cli/: Cargo.toml
clients/cli/src/: bundle.rs  lock.rs  main.rs
clients/cli/src/args/: cover_action.rs  download_range.rs  mod.rs
clients/cli/src/bundle/: epub.rs  mod.rs
clients/cli/src/bundle/download/: data.rs
clients/cli/src/data/: global.rs  global_tracking.rs  mod.rs  novel.rs  novel_tracking.rs
clients/cli/src/download/: event.rs  handler.rs  mod.rs  options.rs
core/: Cargo.toml
core/src/: error.rs  ext.rs  http.rs  lib.rs  mem.rs
crates/bundle/: Cargo.toml
crates/bundle/src/: data.rs  epub.rs  lib.rs
crates/cli/: Cargo.toml
crates/cli/src/: build.rs  cache.rs  lock.rs  main.rs
crates/core/: Cargo.toml
crates/core/src/: config.rs  error.rs  ext.rs  http.rs  lib.rs  log.rs  prelude.rs
crates/core/src/data/: chapter.rs  meta.rs  mod.rs  novel.rs
crates/core/src/filter/: fields.rs  mod.rs
crates/engine/: Cargo.toml
crates/engine/src/: data.rs  error.rs  lib.rs
crates/engine/src/module/: http.rs  io.rs  log.rs  mod.rs  utils.rs
crates/extension/: Cargo.toml
crates/extension/src/: bindings.rs  lib.rs  wasm.rs
crates/ffi/: Cargo.toml
crates/ffi/src/: error.rs  lib.rs  result.rs  runtime.rs
crates/glue/: Cargo.toml
crates/glue/src/: abi.rs  http.rs  lib.rs  logger.rs  macros.rs  mem.rs  node.rs  out.rs  prelude.rs  setup.rs  traits.rs
crates/glue/src/abi/: alloc.rs  convert.rs  mod.rs  primitive.rs  result.rs  stack.rs
crates/glue_derive/: Cargo.toml
crates/glue_derive/src/: expose.rs  fields.rs  lib.rs  params.rs  utils.rs
crates/http/: Cargo.toml
crates/lock/: Cargo.toml
crates/lock/src/: lib.rs
crates/persist/: Cargo.toml
crates/persist/src/: error.rs  event.rs  file.rs  global.rs  lib.rs  novel.rs  options.rs  persist.rs
engine/: Cargo.toml
engine/src/: error.rs  lib.rs
extensions/1stkissnovel/: Cargo.toml
extensions/1stkissnovel/src/: lib.rs
extensions/creativenovels/: Cargo.toml
extensions/creativenovels/src/: lib.rs
extensions/novelfull/: Cargo.toml
extensions/novelfull/src/: lib.rs  search.rs
extensions/novelpub/: Cargo.toml
extensions/novelpub/src/: lib.rs
extensions/royalroad/: Cargo.toml
extensions/royalroad/src/: lib.rs  search.rs
extensions/scribblehub/: Cargo.toml
extensions/scribblehub/src/: lib.rs
glue/: Cargo.toml
glue/src/: http.rs  lib.rs  mem.rs  memory.rs  node.rs  out.rs  prelude.rs
glue_derive/src/: args.rs  lib.rs
interface/: Cargo.toml
plugins/bundle/: Cargo.toml
plugins/bundle/src/: data.rs  epub.rs  lib.rs
test_impl/: Cargo.toml
test_impl/src/: lib.rs
