[workspace]
members = [
    "crates/bundle",
    "crates/cli",
    "crates/core",
    "crates/engine",
    "crates/ffi",
    "crates/glue",
    "crates/glue_derive",
    "crates/persist",
    "extensions/novelpub",
    "extensions/royalroad",
    "extensions/creativenovels",
    "extensions/scribblehub",
    "clients/cli",
]

[workspace.dependencies]
log = { version = "0.4.17" }
wasmtime = "11.0.1"
tokio = { version = "1.29.1", features = ["full"] }

[workspace.dependencies.chrono]
version = "0.4.22"
default-features = false
features = ["clock", "iana-time-zone", "oldtime", "std", "time", "serde"]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = 'abort'
strip = true
