[workspace]
members = [
    "crates/bundle",
    "crates/cli",
    "crates/core",
    "crates/engine",
    "crates/ffi",
    "crates/glue",
    "crates/glue_derive",
    "crates/lock",
    "crates/persist",
    "extensions/novelpub",
    "extensions/royalroad",
    "extensions/creativenovels",
    "extensions/scribblehub",
    "extensions/novelfull",
    "clients/cli",
]

[workspace.dependencies]
log = { version = "0.4.17" }
wasmtime = "19.0.0"
tokio = { version = "1.29.1", features = ["full"] }
reqwest = { version = "0.12.2", features = ["multipart"] }
serde = { version = "1.0.147" }
serde_json = "1.0.88"
once_cell = "1.17.0"
kuchiki = { package = "kuchikiki", version = "0.8.2" }
anyhow = "1.0.66"
regex = "1.10.4"

[workspace.dependencies.chrono]
version = "0.4.22"
default-features = false
features = ["clock", "iana-time-zone", "oldtime", "std", "time", "serde"]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = 'abort'
strip = true
