[package]
name = "fenster_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
clap = { version = "4.0.26", features = ["derive"] }
fenster_engine = { version = "0.1.0", path = "../engine" }
serde = { version = "1.0.147", features = ["derive"] }
simplelog = "0.12.0"
toml = "0.5.9"
