[package]
name = "fenster_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
clap = { version = "4.0.26", features = ["derive"] }
fenster_core = { version = "0.1.0", path = "../core" }
fenster_engine = { version = "0.1.0", path = "../engine" }
itertools = "0.10.5"
log = "0.4.17"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.88"
simplelog = "0.12.0"
toml = "0.5.9"
url = "2.3.1"
