[package]
name = "fenster_engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasmtime = "2.0.1"
fenster_core = { path = "../core", features = ["reqwest"] }
serde_json = "1.0.87"
reqwest = { version = "0.11.12", features = ["blocking"] }
anyhow = "1.0.66"
