[package]
name = "fenster_glue"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.87"
fenster_core = { path = "../core" }
fenster_glue_derive = { path = "../glue_derive" }
serde = "1.0.147"
kuchiki = "0.8.1"