[package]
name = "test_impl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ['cdylib']

[dependencies]
fenster_core = { path = "../core" }
fenster_glue = { path = "../glue" }
serde_json = "1.0.87"
