[package]
name = "quelle_bundle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quelle_core = { version = "0.1.0", path = "../core" }
indoc = { version = "2.0.0", optional = true }
itertools = "0.11.0"
log = "0.4.17"
serde = { version = "1.0.152", features = ["derive"] }
quelle_persist = { version = "0.1.0", path = "../persist", optional = true }

# Link to github since no release with string escaping exists
[dependencies.epub-builder]
git = "https://github.com/lise-henry/epub-builder"
rev = "5c1f9068f88c3ae6d36149de10bdf7e6ce6333df"
optional = true

[features]
default = ["epub"]
epub = ["dep:epub-builder", "dep:indoc"]
persist = ["dep:quelle_persist"]
