[package]
name = "quelle_engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasmtime = "10.0.1"
quelle_core = { path = "../core", features = ["reqwest"] }
serde_json = "1.0.87"
reqwest = { version = "0.11.12", features = ["blocking", "multipart"] }
anyhow = "1.0.66"
env_logger = "0.10.0"
log = "0.4.17"
thiserror = "1.0.37"
serde = "1.0.152"
