[package]
name = "quelle_ffi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "quelle"
crate-type = ['cdylib']

[dependencies]
env_logger = "0.10.0"
quelle_engine = { path = '../engine' }
serde_json = "1.0.93"
thiserror = "1.0.38"
