[package]
name = "quelle_http"
version = "0.1.0"
edition = "2021"


[package.metadata.component]
package = "quelle:http"

[package.metadata.component.target]
path = "../../wit/http/world.wit"
world = "http"

[package.metadata.component.dependencies]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { workspace = true, features = ["blocking", "json"] }
wit-bindgen-rt = { version = "0.24.0", features = ["bitflags"] }
