[package]
name = "quelle_persist"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quelle_core = { version = "0.1.0", path = "../core" }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
slug = "0.1.4"
thiserror = "1.0.38"
chrono = { workspace = true }