[package]
name = "extension_1stkissnovel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ['cdylib']

[dependencies]
quelle_core = { path = "../../crates/core" }
quelle_glue = { path = "../../crates/glue" }
kuchiki = { workspace = true }
once_cell = { workspace = true }
serde_json = { workspace = true }