[package]
name = "extension_royalroad"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ['cdylib']

[dependencies]
quelle_core = { path = "../../crates/core" }
quelle_glue = { path = "../../crates/glue" }
kuchiki = "0.8.1"
serde_json = "1.0.87"
once_cell = "1.17.0"
chrono = { workspace = true }
log = { workspace = true }
serde = { workspace = true, features = ["derive"] }
url = "2.4.0"
