[package]
name = "extension_scribblehub"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ['cdylib']

[dependencies]
quelle_core = { path = "../../crates/core" }
quelle_glue = { path = "../../crates/glue" }
kuchiki = { workspace = true }
serde_json = "1.0.87"
once_cell = { workspace = true } 
chrono = { workspace = true }
log = { workspace = true }